# tgvoipcontest

./: .gitignore  .gitmodules  Dockerfile  deb-packages.txt
src/: CMakeLists.txt  Dockerfile
src/include/: IPCMDest.h  IPCMSource.h  StrException.h
src/scripts/: DockerfileBuildSubmission  DockerfileTestSubmission  build_submission.sh  build_test_env_from_submission.sh  build_test_submission.sh  docker_build.sh  run_test_submission.sh  test_submission.sh
src/tgogg/: CMakeLists.txt
src/tgogg/src/: PCMResampler.cpp  PCMResampler.h  TGOgg.cpp  TGOgg.h  TGOggSource.cpp  TGOggSource.h  TGOggWriter.cpp  TGOggWriter.h
src/tgvoipcall/: CMakeLists.txt  main.cpp
src/tgvoipcallpy/: tgvoipcallpy.py
src/tgvoiprate/: CMakeLists.txt  Dockerfile
src/tgvoiprate/src/: File.cpp  File.h  IPCMSource.cpp  IPCMSource.h  LPF.cpp  LPF.h  StrException.cpp  StrException.h  main.cpp
src/tgvoiprate/src/pesq/: pesq.h  pesqio.c  pesqmain.c  pesqmod.c
tgvoipcallpy/: tgvoipcallpy.py
